// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <Images /> should renders correctly and testing another methods 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="imagesMain"
            isBtnExpandVisible={false}
            name="imagesMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Images"
          />
          <PluginMainPanel
            columnNameSortBy="studyDescription"
            emptyDataMessage="No images"
            filteredData={
              Array [
                Object {
                  "dateRecorded": 736124400000,
                  "dateRecordedConvert": "30-Apr-1993",
                  "source": "orthanc",
                  "sourceId": "55a9fcd2-e8197ca2-1af7a8e2-0e1ab147-841c65ba",
                  "studyDescription": "RT ANKLE",
                  "studyId": "55a9fcd2-e8197ca2-1af7a8e2-0e1ab147-841c65ba",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "studyDescription",
                  "title": "Name",
                  "width": "56%",
                },
                Object {
                  "key": "dateRecorded",
                  "title": "Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            id="55a9fcd2-e8197ca2-1af7a8e2-0e1ab147-841c65ba"
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "dateRecorded": 736124400000,
                  "dateRecordedConvert": "30-Apr-1993",
                  "source": "orthanc",
                  "sourceId": "55a9fcd2-e8197ca2-1af7a8e2-0e1ab147-841c65ba",
                  "studyDescription": "RT ANKLE",
                  "studyId": "55a9fcd2-e8197ca2-1af7a8e2-0e1ab147-841c65ba",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="images"
            totalEntriesAmount={1}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Images /> should renders correctly and testing context and lifecycle componentWillReceiveProps 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="imagesMain"
            isBtnExpandVisible={true}
            name="imagesMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Images"
          />
          <PluginMainPanel
            columnNameSortBy="studyDescription"
            emptyDataMessage="No images"
            filteredData={
              Array [
                Object {
                  "dateRecorded": 736124400000,
                  "dateRecordedConvert": "30-Apr-1993",
                  "source": "orthanc",
                  "sourceId": "55a9fcd2-e8197ca2-1af7a8e2-0e1ab147-841c65ba",
                  "studyDescription": "RT ANKLE",
                  "studyId": "55a9fcd2-e8197ca2-1af7a8e2-0e1ab147-841c65ba",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "studyDescription",
                  "title": "Name",
                  "width": "56%",
                },
                Object {
                  "key": "dateRecorded",
                  "title": "Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            id="55a9fcd2-e8197ca2-1af7a8e2-0e1ab147-841c65ba"
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "dateRecorded": 736124400000,
                  "dateRecordedConvert": "30-Apr-1993",
                  "source": "orthanc",
                  "sourceId": "55a9fcd2-e8197ca2-1af7a8e2-0e1ab147-841c65ba",
                  "studyDescription": "RT ANKLE",
                  "studyId": "55a9fcd2-e8197ca2-1af7a8e2-0e1ab147-841c65ba",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="images"
            totalEntriesAmount={1}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <ImagesDetail
          currentPanel="imagesDetail"
          detail={
            Object {
              "instanceIds": Array [
                "d1d4875a-2a8267c2-2ee4f8f0-3d9e917e-9a141930",
              ],
              "modality": "CT",
              "operatorsName": "Anonymized",
              "protocolName": "test",
              "seriesDate": 736124400000,
              "seriesNumber": "365",
              "seriesTime": 37644000,
              "source": "orthanc",
              "sourceId": "00d87cf2-13d39285-50905549-3faf78a7-59656dd3",
              "stationName": "CT01OC0",
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          instanceIds={
            Array [
              "d1d4875a-2a8267c2-2ee4f8f0-3d9e917e-9a141930",
            ]
          }
          name="imagesDetail"
          onExpand={[Function]}
          onShow={[Function]}
          openedPanel="imagesPanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Images /> should renders correctly with empty store 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="imagesMain"
            isBtnExpandVisible={false}
            name="imagesMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Images"
          />
          <PluginMainPanel
            columnNameSortBy="studyDescription"
            emptyDataMessage="No images"
            filteredData={
              Array [
                Object {
                  "dateRecorded": 736124400000,
                  "dateRecordedConvert": "30-Apr-1993",
                  "source": "orthanc",
                  "sourceId": "55a9fcd2-e8197ca2-1af7a8e2-0e1ab147-841c65ba",
                  "studyDescription": "RT ANKLE",
                  "studyId": "55a9fcd2-e8197ca2-1af7a8e2-0e1ab147-841c65ba",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "studyDescription",
                  "title": "Name",
                  "width": "56%",
                },
                Object {
                  "key": "dateRecorded",
                  "title": "Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "dateRecorded": 736124400000,
                  "dateRecordedConvert": "30-Apr-1993",
                  "source": "orthanc",
                  "sourceId": "55a9fcd2-e8197ca2-1af7a8e2-0e1ab147-841c65ba",
                  "studyDescription": "RT ANKLE",
                  "studyId": "55a9fcd2-e8197ca2-1af7a8e2-0e1ab147-841c65ba",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="images"
            totalEntriesAmount={1}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Images /> should renders correctly with seriesDetail and testing Detail Panel 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="imagesMain"
            isBtnExpandVisible={true}
            name="imagesMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Images"
          />
          <PluginMainPanel
            columnNameSortBy="studyDescription"
            emptyDataMessage="No images"
            filteredData={
              Array [
                Object {
                  "dateRecorded": 736124400000,
                  "dateRecordedConvert": "30-Apr-1993",
                  "source": "orthanc",
                  "sourceId": "55a9fcd2-e8197ca2-1af7a8e2-0e1ab147-841c65ba",
                  "studyDescription": "RT ANKLE",
                  "studyId": "55a9fcd2-e8197ca2-1af7a8e2-0e1ab147-841c65ba",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "studyDescription",
                  "title": "Name",
                  "width": "56%",
                },
                Object {
                  "key": "dateRecorded",
                  "title": "Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            id="55a9fcd2-e8197ca2-1af7a8e2-0e1ab147-841c65ba"
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "dateRecorded": 736124400000,
                  "dateRecordedConvert": "30-Apr-1993",
                  "source": "orthanc",
                  "sourceId": "55a9fcd2-e8197ca2-1af7a8e2-0e1ab147-841c65ba",
                  "studyDescription": "RT ANKLE",
                  "studyId": "55a9fcd2-e8197ca2-1af7a8e2-0e1ab147-841c65ba",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="images"
            totalEntriesAmount={1}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <ImagesDetail
          currentPanel="imagesDetail"
          detail={
            Object {
              "instanceIds": Array [
                "d1d4875a-2a8267c2-2ee4f8f0-3d9e917e-9a141930",
              ],
              "modality": "CT",
              "operatorsName": "Anonymized",
              "protocolName": "test",
              "seriesDate": 736124400000,
              "seriesNumber": "365",
              "seriesTime": 37644000,
              "source": "orthanc",
              "sourceId": "00d87cf2-13d39285-50905549-3faf78a7-59656dd3",
              "stationName": "CT01OC0",
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          instanceIds={
            Array [
              "d1d4875a-2a8267c2-2ee4f8f0-3d9e917e-9a141930",
            ]
          }
          name="imagesDetail"
          onExpand={[Function]}
          onShow={[Function]}
          openedPanel="imagesPanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Images /> should renders correctly with seriesDetail and testing Detail Panel 2`] = `
<section
  className="page-wrapper"
>
  <div
    className="section full-panel full-panel-details"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <ImagesDetail
          currentPanel="imagesDetail"
          detail={
            Object {
              "instanceIds": Array [
                "d1d4875a-2a8267c2-2ee4f8f0-3d9e917e-9a141930",
              ],
              "modality": "CT",
              "operatorsName": "Anonymized",
              "protocolName": "test",
              "seriesDate": 736124400000,
              "seriesNumber": "365",
              "seriesTime": 37644000,
              "source": "orthanc",
              "sourceId": "00d87cf2-13d39285-50905549-3faf78a7-59656dd3",
              "stationName": "CT01OC0",
            }
          }
          editedPanel={Object {}}
          expandedPanel="imagesPanel"
          instanceIds={
            Array [
              "d1d4875a-2a8267c2-2ee4f8f0-3d9e917e-9a141930",
            ]
          }
          name="imagesDetail"
          onExpand={[Function]}
          onShow={[Function]}
          openedPanel="imagesPanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Images /> should renders correctly with seriesDetail and testing Detail Panel 3`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    />
  </div>
</section>
`;
